# slog

./: CMakeLists.txt
playground/: main.cpp
src/: log.cpp  slog.h  slog_types.h
